# masterthesis

./: LICENSE  README.md
Quelltext/2 Vektorisierung mit AVX2 Befehlssatz/: CMakeLists.txt  avx_intro.cpp
Quelltext/3 Sortiernetzwerke/01. Serielles nicht-vektorisiertes Sortiernetzwerk/: CMakeLists.txt  sort_4_int.cpp
Quelltext/3 Sortiernetzwerke/02. Sortiernetzwerk fuer 8 Elemente ohne Optimierung/: CMakeLists.txt  sort_8_nonopt.cpp
Quelltext/3 Sortiernetzwerke/03. Sortiernetzwerk fuer 16 Elemente ohne Optimierung/: CMakeLists.txt  sort_16_nonopt.cpp
Quelltext/3 Sortiernetzwerke/04. Bitonic Mergesort ohne Optimierung/: CMakeLists.txt  bitonic_nonopt.cpp
Quelltext/3 Sortiernetzwerke/05. Zeitmessung/: CMakeLists.txt  speedtest_sn.cpp
Quelltext/4 Mergesort/Zeitmessung/: CMakeLists.txt  aligned_vector.h  mergesort_test.cpp  sorting_network_int_avx2.cpp  sorting_network_int_avx2.h
Quelltext/5 Quicksort/01. Zeitmessung Quicksort/: CMakeLists.txt  avx2sort.h  speedtest_qs.cpp
Quelltext/5 Quicksort/02. Zeitmessung Quickselect/: CMakeLists.txt  speedtest_qsel.cpp
Quelltext/Anhang/01. Sortiernetzwerk fuer 8 Elemente/: CMakeLists.txt  sort_8_permutation_shuffle.cpp
Quelltext/Anhang/02. Sortiernetzwerk fuer 16 Elemente/: CMakeLists.txt  sort_16_permutation_shuffle.cpp
Quelltext/Anhang/03. Bitonic Mergesort fuer 8 Elemente optimiert/: CMakeLists.txt  sort_8_opt.cpp
Quelltext/Anhang/04. Bitonic Mergesort fuer 16 Elemente optimiert/: CMakeLists.txt  sort_16_opt.cpp
Quelltext/Anhang/05. Spaltenweise Sortierung von 16 Elementen und Transposition/: CMakeLists.txt  sort_cols_transposition.cpp
Quelltext/Anhang/06. Modul-basierte Sortierung von N Vektoren ohne Transposition/: CMakeLists.txt  sort_no_transpose.cpp
Quelltext/Header (schnellster Algorithmus)/: CMakeLists.txt  avx2sort.h  main.cpp
